@@ -10,5 +10,5 @@ noinst_LTLIBRARIES = libapi.la
 
 libapi_la_SOURCES = omenquire.cc omquery.cc omdatabase.cc \
 		    omstem.cc ombatchenquire.cc omdocument.cc \
-		    omindexdoc.cc omwritabledb.cc omerror.cc
-		    #omsettings.cc
+		    omindexdoc.cc omwritabledb.cc omerror.cc \
+		    omsettings.cc
